--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "RobloxExtra",
   "description": "The world's best and safest Roblox Extension",
   "version": "1.0.0",
-  "author": "PirAhmedShah",
+  "author": "Ramzan",
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
